# DimensionEngine

./: .gitignore  .gitmodules  ;a  Build.sh  CMakeLists.txt  Launcher.cpp  README.md  compile_shader.bat  compile_shader.sh  compile_shader_glsl.bat  compile_shader_hlsl.bat
3rd/: CMakeLists.txt
3rd/UncleDon-Logger/: CMakeLists.txt  main.cpp
3rd/uncledon-logger/: .gitignore  CMakeLists.txt  README.md  main.cpp
Editor/: CMakeLists.txt  Config.json  Config.yaml  Config_Default.json  Enter.cpp  Game.cpp  Game.h  Game.hpp  GameCommands.cpp  GameCommands.hpp  GameConsole.cpp  GameConsole.hpp  Keybinds.cpp  Keybinds.hpp  logo.aps  logo.rc
Engine/: CMakeLists.txt  Config.json  Config.yaml  Defines.hpp  EngineConfig.json  Entry.hpp  GameType.hpp  IGame.hpp
Engine/Containers/: FString.cpp  FString.hpp  Freelist.cpp  Freelist.hpp  TArray.hpp  THashTable.cpp  THashTable.hpp  TMap.hpp  TQueue.hpp  TString.cpp  TString.hpp
Engine/Core/: Application.cpp  Application.hpp  CPython.cpp  CPython.hpp  Clock.cpp  Clock.hpp  Console.cpp  Controller.cpp  Controller.hpp  CoreMinimal.hpp  DMemory.cpp  DMemory.hpp  DMutex.hpp  DThread.hpp  Engine.cpp  Engine.hpp  EngineLogger.cpp  EngineLogger.hpp  Event.cpp  Event.hpp  Identifier.cpp  Identifier.hpp  Input.cpp  Input.hpp  Keymap.cpp  Metrics.cpp  Metrics.hpp  UID.cpp  UID.hpp  Utils.cpp  Utils.hpp
Engine/Framework/: BaseObject.h  IObject.h
Engine/Math/: Color.hpp  DMath.cpp  DMath.hpp  ForwardDeclarations.hpp  Frustum.hpp  GeometryUtils.cpp  GeometryUtils.hpp  GeometyrUtils.cpp  MathTypes.hpp  Matrix.hpp  Quaternion.hpp  Transform.cpp  Transform.h  Transform.hpp  Vector.hpp  Vertex.hpp
Engine/Memory/: DynamicAllocator.cpp  DynamicAllocator.h  Freelist.cpp  Freelist.hpp
Engine/Platform/: File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  IPlatform.hpp  JsonObject.cpp  JsonObject.h  Platform.hpp  PlatformMacOS.cpp  PlatformMacOS.mm  PlatformWin32.cpp
Engine/Renderer/: Camera.cpp  Camera.hpp  RendererBackend.hpp  RendererFrontend.cpp  RendererFrontend.hpp  RendererTypes.hpp
Engine/Rendering/: RenderTypes.hpp  Renderer.cpp  Renderer.hpp  RendererFrontend.cpp
Engine/Resources/: Font.hpp  Geometry.cpp  Geometry.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Resource.hpp  ResourceTypes.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp  UIText.cpp  UIText.hpp
Engine/Systems/: CameraSystem.cpp  CameraSystem.h  FontSystem.cpp  FontSystem.hpp  GeometrySystem.h  GeometrySysyem.cpp  JobSystem.cpp  JobSystem.hpp  MaterialSystem.cpp  MaterialSystem.h  RenderViewSystem.cpp  RenderViewSystem.hpp  ResourceSystem.cpp  ResourceSystem.h  ShaderSystem.cpp  ShaderSystem.h  TextureSystem.cpp  TextureSystem.h
Engine/UI/: ImageWidget.h  PanelWidget.h  Widget.h
Engine/Utils/: FileWatcher.cpp  FileWatcher.h  JSONReader.cpp  JSONReader.h  YAMLReader.cpp  YAMLReader.h
RenderEngine/: .gitignore  CMakeLists.txt  Launcher.cpp  compile_commands.json
RenderEngine/application/: Application.cpp  Application.hpp  CMakeLists.txt  Window.cpp  Window.hpp
RenderEngine/engine/: CMakeLists.txt  EngineLogger.cpp  EngineLogger.hpp
RenderEngine/physics/: CMakeLists.txt
RenderEngine/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
RenderEngine/shader/: frag.spv  originalFrag.spv  shader.frag  shader.vert  triangle.vert  triangle_frag.spv  vert.spv
RenderEngine/vulkan/: Buffer.hpp  CMakeLists.txt  CmdBuffer.cpp  CmdBuffer.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  VkContext.cpp  VkContext.hpp
RendingEngine/: CMakeLists.txt  compile_commands.json
RendingEngine/include/: Loader.hpp  TransMat.hpp  headers.hpp
RendingEngine/src/: Application.cpp  Loader.cpp  ModelTransMat.cpp
TestEditor/: CMakeLists.txt  Enter.cpp  Game.cpp  Game.hpp  logo.rc
Tests/: CMakeLists.txt  TempleteTest.h  Test.cpp  UnitTest.cpp
Tests/Array/: UnitTestArray.cpp
Tests/Audio/: TestAudio.cpp
Tests/Freelist/: MemoryAllocatorTester.h  MemoryAnalyer.h  TestFreelist.cpp
Tests/HashTable/: TestHashtable.cpp
Tests/MathLibrary/: MathLibraryTests.hpp  TestMatrix.cpp
Tests/Matrix/: TestMatrix.cpp
Tests/SIMD/: TestSIMD.cpp
Tests/String/: TestString.cpp
engine/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Defines.hpp  EngineLogger.cpp  EngineLogger.hpp  EngineStructures.hpp  Entry.hpp  GameType.hpp  README.md  Scene.cpp  Scene.hpp  compile_shader.bat  compile_shader.sh
engine/Containers/: Freelist.cpp  Freelist.hpp  TArray.cpp  TArray.hpp  THashTable.cpp  THashTable.hpp  TString.hpp
engine/Core/: Application.cpp  Application.hpp  Clock.cpp  DMemory.cpp  DMemory.hpp  Event.cpp
engine/Foundation/: Camera.hpp
engine/Math/: DMath.cpp  GeometryUtils.hpp  GeometyrUtils.cpp  MathTypes.hpp  Transform.cpp  Transform.hpp
engine/Memory/: DynamicAllocator.cpp
engine/Platform/: FileSystem.cpp  FileSystem.hpp  Platform.hpp  PlatformWin32.cpp
engine/Renderer/: RendererBackend.cpp  RendererBackend.hpp  RendererFrontend.cpp  RendererFrontend.hpp  RendererTypes.hpp
engine/Resources/: Geometry.hpp  Material.hpp  Mesh.hpp  Resource.hpp  ResourceTypes.hpp  Shader.hpp  Texture.hpp
engine/Systems/: GeometrySystem.h  GeometrySysyem.cpp  MaterialSystem.cpp  MaterialSystem.h  ResourceSystem.cpp  ResourceSystem.h  ShaderSystem.cpp  ShaderSystem.h  TextureSystem.cpp  TextureSystem.h
engine/TestEditor/: CMakeLists.txt  Enter.cpp  Game.cpp  Game.hpp
engine/core/: Application.cpp  Application.hpp  Clock.cpp  Clock.hpp  DMemory.cpp  DMemory.hpp  EngineLogger.cpp  EngineLogger.hpp  Event.cpp  Event.hpp  FileUtil.cpp  FileUtil.hpp  Input.cpp  Input.hpp
engine/engine/: CMakeLists.txt  Defines.hpp  Entry.hpp
engine/foundation/: Camera.cpp  Camera.hpp
engine/global/: FileUtil.cpp  FileUtil.hpp  GDefines.hpp
engine/platform/: Platform.hpp  platform.hpp  platform_win32.cpp
engine/resource/: ConfigFile.cpp  ConfigFile.hpp  Resource.hpp
engine/script/: compile_shader.py
examples/: CMakeLists.txt
examples/edge/: config.conf  (+1 more)
(+573 files in other folders)
